// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`asRelativeUnit 1`] = `
Object {
  "a": "11levens",
  "b": "22levens",
  "c": "33levens",
  "d": "44levens",
  "e": "55levens",
  "f": "66levens",
}
`;

exports[`makePainter - implicit 1`] = `
Array [
  Object {
    "&:hover": Object {
      "svg": Object {
        "@media(min-width: 112.5rem)": Object {
          "fill": "magenta",
        },
        "@media(min-width: 128rem)": Object {
          "fill": "magenta",
        },
        "@media(min-width: 160rem)": Object {
          "fill": "magenta",
        },
        "@media(min-width: 20rem)": Object {
          "fill": "cyan",
        },
        "@media(min-width: 30rem)": Object {
          "fill": "cyan",
        },
        "@media(min-width: 37.5rem)": Object {
          "fill": "cyan",
        },
        "@media(min-width: 46rem)": Object {
          "fill": "cyan",
        },
        "@media(min-width: 54rem)": Object {
          "fill": "cyan",
        },
        "@media(min-width: 56.25rem)": Object {
          "fill": "magenta",
        },
        "@media(min-width: 68rem)": Object {
          "fill": "magenta",
        },
        "@media(min-width: 75rem)": Object {
          "fill": "magenta",
        },
        "@media(min-width: 81.25rem)": Object {
          "fill": "magenta",
        },
        "fill": "cyan",
      },
    },
    "@media(min-width: 112.5rem)": Object {
      "color": "yellow",
    },
    "@media(min-width: 128rem)": Object {
      "color": "yellow",
    },
    "@media(min-width: 160rem)": Object {
      "color": "yellow",
    },
    "@media(min-width: 20rem)": Object {
      "color": "orange",
    },
    "@media(min-width: 30rem)": Object {
      "color": "orange",
    },
    "@media(min-width: 37.5rem)": Object {
      "color": "orange",
    },
    "@media(min-width: 46rem)": Object {
      "color": "yellow",
    },
    "@media(min-width: 54rem)": Object {
      "color": "yellow",
    },
    "@media(min-width: 56.25rem)": Object {
      "color": "yellow",
    },
    "@media(min-width: 68rem)": Object {
      "color": "yellow",
    },
    "@media(min-width: 75rem)": Object {
      "color": "yellow",
    },
    "@media(min-width: 81.25rem)": Object {
      "color": "yellow",
    },
    "color": "red",
    "svg": Object {
      "@media(min-width: 112.5rem)": Object {
        "fill": "blue",
      },
      "@media(min-width: 128rem)": Object {
        "fill": "blue",
      },
      "@media(min-width: 160rem)": Object {
        "fill": "blue",
      },
      "@media(min-width: 20rem)": Object {
        "fill": "lime",
      },
      "@media(min-width: 30rem)": Object {
        "fill": "lime",
      },
      "@media(min-width: 37.5rem)": Object {
        "fill": "lime",
      },
      "@media(min-width: 46rem)": Object {
        "fill": "lime",
      },
      "@media(min-width: 54rem)": Object {
        "fill": "blue",
      },
      "@media(min-width: 56.25rem)": Object {
        "fill": "blue",
      },
      "@media(min-width: 68rem)": Object {
        "fill": "blue",
      },
      "@media(min-width: 75rem)": Object {
        "fill": "blue",
      },
      "@media(min-width: 81.25rem)": Object {
        "fill": "blue",
      },
      "fill": "lime",
    },
  },
]
`;

exports[`makePainter - nested 1`] = `
Array [
  Object {
    "@media(min-width: 112.5rem)": Object {
      "points": 2048,
    },
    "@media(min-width: 128rem)": Object {
      "points": 2560,
    },
    "@media(min-width: 160rem)": Object {
      "points": 4000,
    },
    "@media(min-width: 20rem)": Object {
      "points": 480,
    },
    "@media(min-width: 30rem)": Object {
      "points": 600,
    },
    "@media(min-width: 37.5rem)": Object {
      "points": 736,
    },
    "@media(min-width: 46rem)": Object {
      "points": 864,
    },
    "@media(min-width: 54rem)": Object {
      "points": 900,
    },
    "@media(min-width: 56.25rem)": Object {
      "points": 1088,
    },
    "@media(min-width: 68rem)": Object {
      "points": 1200,
    },
    "@media(min-width: 75rem)": Object {
      "points": 1300,
    },
    "@media(min-width: 81.25rem)": Object {
      "points": 1800,
    },
    "points": 320,
  },
]
`;

exports[`makePainter 1`] = `[Function]`;
